plugins {
    id 'java'
    id 'eclipse'
}

repositories {
    mavenLocal()
    maven { url = 'https://repo.runelite.net' }
    mavenCentral()
}

def runeLiteVersion = project.findProperty('runeLiteVersion') ?: '1.12.6'

dependencies {
    compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
    runtimeOnly group: 'net.runelite', name: 'client', version: runeLiteVersion
    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.20'
    testImplementation 'junit:junit:4.12'
    testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
    testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion
}

group = 'com.datbear'
version = '1.2'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release.set(11)
}

tasks.register('runRuneLite', JavaExec) {
    group = 'run'
    description = 'Run RuneLite client with BearSailing plugin loaded and JDWP (port 5005) for debugging'
    mainClass.set('com.datbear.BearracudaTrialsPluginTest')
    classpath = sourceSets.test.runtimeClasspath
    jvmArgs '-ea', '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005'
    systemProperties System.getProperties().findAll { k, _ -> k.startsWith('runelite.') }
    args '--profile=plugin-dev', '--developer-mode'
}

tasks.register('printRuntimeCp') {
    group = 'help'
    description = 'Print runtime classpath as a single line for launch.json classPaths'
    doLast { println sourceSets.main.runtimeClasspath.asPath }
}

tasks.register('copyRuntimeDeps', Copy) {
    group = 'build'
    description = 'Copy runtime dependency JARs into lib/ for wildcard classpath use in VS Code.'
    doFirst {
        def libDir = file("${projectDir}/lib")
        if (libDir.exists()) {
            println "Cleaning existing lib/ contents..."
            delete libDir.listFiles()
        }
    }
    from(configurations.runtimeClasspath.filter { it.isFile() })
    into("${projectDir}/lib")
    duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

